InputTask component, crud for task

--- a/src/views/components/InputPlus/index.module.scss
+++ b/src/views/components/InputPlus/index.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 50px;
+  margin-bottom: 20px;
   &_control {
     border: 1px solid #b1b1b1;
     border-top-left-radius: 5px;
