--- a/src/views/App/index.module.scss
+++ b/src/views/App/index.module.scss
@@ -8,4 +8,8 @@
     margin-bottom: 0.3em;
     text-align: center;
   }
+  .not_articles_text {
+    text-align: center;
+    font-size: 1.3em;
+  }
 }
